commitand push changes

--- a/Exam_prep/.vscode/launch.json
+++ b/Exam_prep/.vscode/launch.json
@@ -12,7 +12,7 @@
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "C:/msys64/ucrt64/bin/gdb.exe",
+            "miDebuggerPath": "d:/winlibs-x86_64-posix-seh-gcc-15.1.0-mingw-w64msvcrt-12.0.0-r1/mingw64/bin/gdb.exe",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -20,7 +20,8 @@
                     "ignoreFailures": true
                 }
             ],
-            "preLaunchTask": "build active file"
+            "preLaunchTask": "Build C++ (WinLibs)"
         }
     ]
 }
+
