--- a/Exam_prep/.vscode/tasks.json
+++ b/Exam_prep/.vscode/tasks.json
@@ -2,25 +2,28 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "build active file",
+            "label": "Build C++ (WinLibs)",
             "type": "shell",
-            "command": "g++",
+            "command": "d:\\winlibs-x86_64-posix-seh-gcc-15.1.0-mingw-w64msvcrt-12.0.0-r1\\mingw64\\bin\\g++.exe",
             "args": [
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}/${fileBasenameNoExtension}.exe"
+                "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
-            "group": "build",
+            "options": {
+                "cwd": "${fileDirname}"
+            },
             "problemMatcher": [
                 "$gcc"
             ],
-            "detail": "Compiles a C++ file using g++"
+            "group": "build",
+            "detail": "Build C++ file using g++ from WinLibs"
         },
         {
             "type": "cppbuild",
             "label": "C/C++: g++.exe build active file",
-            "command": "C:\\msys64\\ucrt64\\bin\\g++.exe",
+            "command": "d:\\winlibs-x86_64-posix-seh-gcc-15.1.0-mingw-w64msvcrt-12.0.0-r1\\mingw64\\bin\\g++.exe",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
@@ -29,7 +32,7 @@
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
-                "cwd": "${fileDirname}"
+                "cwd": "d:\\winlibs-x86_64-posix-seh-gcc-15.1.0-mingw-w64msvcrt-12.0.0-r1\\mingw64\\bin"
             },
             "problemMatcher": [
                 "$gcc"
